[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/font/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://nodes/TutorialHint.gd" type="Script" id=2]
[ext_resource path="res://assets/font/Manjari-Bold.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 29
outline_color = Color( 0.184314, 0.184314, 0.184314, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 3 )

[node name="TutorialHint" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0901961, 0.0980392, 0.0313726, 0.345098 )
script = ExtResource( 2 )

[node name="ButtonSkip" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.5
margin_top = -354.5
margin_right = 154.5
margin_bottom = -317.5
color = Color( 0.184314, 0.184314, 0.184314, 1 )

[node name="Button" type="Button" parent="ButtonSkip"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "SKIP TUTORIAL"
flat = true

[node name="Panel" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.0
margin_top = -248.0
margin_right = 276.0
margin_bottom = 8.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="lb_desc" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 11.0
margin_right = -10.0
margin_bottom = -11.0
custom_colors/font_color = Color( 0.705882, 0.705882, 0.705882, 1 )
custom_fonts/font = SubResource( 1 )
text = "Utiliza las teclas [W][A][S][D] para moverte por el calabozo.
[Q] para cambiar de personaje.
[E] para una vista panoramica."
align = 1
valign = 1
autowrap = true

[node name="ButtonOk" type="ColorRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -54.0
margin_top = -13.0
margin_right = 54.0
margin_bottom = 24.0
color = Color( 0.184314, 0.184314, 0.184314, 1 )

[node name="Button" type="Button" parent="Panel/ButtonOk"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "OK"
flat = true

[node name="Attributes" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 305.0
margin_top = -325.0
margin_right = 767.0
margin_bottom = 148.0
color = Color( 0.121569, 0.12549, 0.180392, 1 )

[node name="line" type="ColorRect" parent="Attributes"]
anchor_bottom = 1.0
margin_right = 7.0
color = Color( 0.2, 0.203922, 0.301961, 1 )

[node name="RTL" type="RichTextLabel" parent="Attributes"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 17.0
margin_right = -17.0
custom_colors/default_color = Color( 0.792157, 0.792157, 0.792157, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Ataque Directo: Consume 2x[font=res://assets/font/bbcode_font.tres][img=40]res://assets/dices/AX.png[/img][/font] para dañar 1xVIDA a un enemigo."
text = "Ataque Directo: Consume 2x para dañar 1xVIDA a un enemigo."
fit_content_height = true
scroll_active = false
